syntax = "proto3";
package jschain.jschain;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "jschain/x/jschain/types";

// Msg defines the Msg service.
service Msg {
      rpc CreatePost(MsgCreatePost) returns (MsgCreatePostResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreatePost {
  string creator = 1;
  string title = 2;
  string body = 3;
}

message MsgCreatePostResponse {
}

// this line is used by starport scaffolding # proto/tx/message
